# simple_remote_hashmap

./: Cargo.toml  test.hurl
migrations/: 20240804145633_hashmap_table.sql
src/: handlers.rs  hashmap.rs  main.rs
