[package]
name = "simple_remote_hashmap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
bincode = "1.3.3"
dashmap = "6.0.1"
log = "0.4.22"
simple_logger = "5.0.0"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.39.2", features = ["full"] }
